@@ -45,27 +45,27 @@ EBUILD xorg-server-1.14.7.ebuild 6990 SHA256 fb8095e48e36082fea4a0d49fb4d0c66cb7
 EBUILD xorg-server-1.15.2-r1.ebuild 7223 SHA256 a5f4065ca7d9a0ddd26202cbf933bf7a0e3d42812f18f6d113e0f730d39e505d SHA512 9c7568589838955f8b3fecded46ea7149bc62a6f6c35c56ddf4c31c5dbae190315bfe155406f25786d81627bbf4666fb3f74fe1e036041701f8fd65e5199202e WHIRLPOOL af0b64311352dff7eac33b2bd5948b540d9be0e112fcc1abb948d1cf5d6e4fdc3cfb7a00be051d10ab1f0c631311987aeefa887af13ba18208eea6d432cd2b88
 EBUILD xorg-server-1.16.3-r1.ebuild 6761 SHA256 285ba4a6c9c8e40b1261fae8f606c350dfa03df96fb233f0de237a981bfb8b4c SHA512 457d08a77be36547c4f1802cf0e965449e713e7f930754a10b32d996bfec23fbe69f2e96870d88798d5fc468229552d25a09f18b17c1b591b788552b3e202f66 WHIRLPOOL 1039b0eee178cf6b0f862ee2b26579658e9dbe32ee9c9f278b7c9938f228384dee2aa42ead4375492f6cab191cd322fcd12e59b67cddbc26fb9d0ed341268565
 EBUILD xorg-server-1.16.3.ebuild 7662 SHA256 ed4a52760a60b2baf5162235a5ce6d3c6c0aa87c91f4d05de3c209fbe1f41a61 SHA512 6687e90d925bcd1af3d2e21c2dc8abaec9866ab4952f04d0c2edefa54e00cf246b299ab73c4f5fd7fbf9af3802e4be892ee6e5c8135a7eddb2c1fb3fdad7d1f7 WHIRLPOOL 950ea824fbd63110f11d99d1387031c85c3ecaea7f231e18ac609153cf2f5e981ed284ebcf78b8a36b276447e5f86bd6318c2a168207497bf83048e86e01ef02
-EBUILD xorg-server-1.17.0.ebuild 6873 SHA256 a00c8e490786fa16eeae303ac8149d5e8e04625ad07f515582179548581993f4 SHA512 771ada71b9bfd6d899fa8d36944716407c34ab5d5c9890590d96c20fd332046b6adafdbb945b80bf9b36dffe537c81dc92141e61809614f52d169055e0586d14 WHIRLPOOL 511ccc1142a8d5558322e4f0c3442c49ef55c7e7c5f4bea91e725a975adec31872900aa65d3c10bfa34453524ec9a2a020059fa2f50807feb3b4ce23db755cae
+EBUILD xorg-server-1.17.0.ebuild 6152 SHA256 07bc61384c6bd41a0df7a353dbc3f4ee449250a71e26d804113cda367d1ecfad SHA512 c2999e551d08c9315c6581fff18220a4c6c846cce527ee7c11e491f7d3bc2610c931ced09894749052614fae3b162b00961f472a70198dd4113af6087b127ff8 WHIRLPOOL dceb49434de366df2f2ac00642d649517ab7ddee4ac0ac6a16b1bcc552a6be3b8e0a14bec84728842aed1f62eba397aa2a347fb012b1740477dbf9ede5945bd1
 EBUILD xorg-server-1.9.5-r3.ebuild 7967 SHA256 74e6a536de6c99f4c3081ca6f4b65c653e6b54d72ba17963b2186be0b031a3a6 SHA512 bb5b4f17f6fbd07cc1501019464b7b944599256e5ca0021d5481e6c194fd19fdb0e5029351b999b1efa621c61c1c7256970d431f99b3c31a659859649a09a63d WHIRLPOOL 4ff73d879f6a8c3c69d2f8f7414eb08d873187e3cbd6b4f1453d53398a3b13a93da4e3847a62c87e6b26f30fffb2fb7153b2e3da3a8bd0eaffc4eeb870701cb8
-MISC ChangeLog 61069 SHA256 7b3e4e4c4bd089ce1a4482f0f0d309f3da8af580f08e6de87de50e9d0801e489 SHA512 a5c107ddfaa19e81d9d844167a80b052fba7884c1c76b030440b64a163b97977cfc7433adc3b83c40dbbc6b2f18d761f32b98dfe6830062069b737cc69fac72d WHIRLPOOL c559e24dba1ceeee752c422828d57dd9549327b12d0172f5638d318d533216f4c667e420eafc0ad616e32d4df0270ff4c86bfe6da1ebf02f39322a71207fbde3
+MISC ChangeLog 61218 SHA256 db19799f0c4ea2cb89e9a3c1c370830526f8ac9ddad2acd51b7c3337c1c9bf30 SHA512 f2311d184f94efeb89a48d7c27657ef1a438b0b7cff2c2e970c2f9893a10b875adf899b41a6f38f3415d11f12db2c7ba2b40d22e3d18de52298aa3db5cc9667b WHIRLPOOL 4d4eeba27adfb99418bb994d9e1356da609c7e2698202ea6df6f90ed02fa6ba85e3d75648f7f0b9226e9fd6e6ddb4eb3b4068dabbbea5fcd293ee9273e285213
 MISC ChangeLog-2009 109242 SHA256 76119bd85f64b74b4f8129911eef944e8f1baa3ae38bbfb65bcd6197a6f58c88 SHA512 200b2a1f8d66bc4461de84a5b675ae9bdc1fd38ffea339cdc69afdb613d7a6d6ffe29175fba62b10c4f9d95e050035933f59e21172bf9c545d7a70137c8d04f4 WHIRLPOOL 1c084a461e803c1a6627986cb2444cd7a23743f409df5bb1ca5f55d1e7c3106670cfc2cd4f875a479e0c75513b7937ee35b591b4016b715f7fa45209e098cece
 MISC metadata.xml 803 SHA256 11ce7d6b3d1a4b32ac268d791e3e9fc1a47e579fb0587f87caf4c064c1abc355 SHA512 73fee10d52b8012ee64bdb789d0ecc0368c418822ec823ad22c1eac3c7c4af37c561a58599db68a6638059624e6f37e7d3cb5f3fd363255a372a9614c1deaf75 WHIRLPOOL f26245d7f8c9bf8c653730e1e832781289e06e43dc6cbc1efc422b6e8e3f7342e5a94f8cb731b4c2193c40af6087048da0ca384e4f13e697f86098296936e2e2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU15+WXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJU2CTSXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
-MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYRIKcP/iEBbQMfiY9ExMApImQ4n/f2
-Ufrhvrw9PseESpJ/N+ZyDrMvIYQRbPzN+NKBwuKLPh9n2OgOg7eMg19F1a8x2uSO
-vD7CbDQWgKy/Fj0O2eH+X2KkIMFVTm6W8taumMGlHX4520W1vUQ9LcAAvzh8CJy+
-76lrH9ueF0mr+bOHUTZzFEmsT+e8v6VUaT8Rc2uyd267hDNGlsSKU0PRG+qWjXSF
-ZXQ+Hl9dmZcgRb2Ic7itCzVNcRF3XO/uNAmajFj7/Sv++fJ0WUTCRngSUVaSX3Ek
-RM3tm9J1PAPnW0Z1Dq76pU/Czawqs1vh9NyCgaaCqqZ/YQh6vqymUKDPgvmolzLd
-zPVfu6l1gOyPbRFi/u64FKR1tgqFLJ1N7XgYNMwCi7Wu0IOoGtDuwRVyrPTxIA4v
-tjvazkzgwo+5p3OakinhfkF5h11+8oHxHNmBU083Aoy0tNN8VesHMRVdo0HCDx+U
-ahFVj7n3vVF0NNJRxGvvJ/oUfTbDGIssbEI9eNRp622pmV5rtL4AGZrqUF5W2Bso
-zQT9yV0HFyXevmUKsOkECxAT3tg8VALeZBN1Q2ngavyNYhBmOTncZwKSxM0rGFGB
-yUc1YOOnnDFYbAiJi905yQdu6pjwGooAdULK7jZBHQYYnBK0NGUIREYj+QRj/v/V
-uLyLXz+A2aSNJqhjnDtf
-=EmC9
+MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYRBAoQAJEwaT2Jqd2643CpcbkiABsH
+MrSWdDkQDDMLTo2bMLB/zKMoWI/p+4YbJqfXLhR39QyTtkt/T1JNcaem9MdxoMUZ
+An1ic8x2YQkOfPycEyKsyJfj2KCx/rdUYkmXOle45uFcf73PzFKdZtxEqQksBV1f
+M4yme2mw3B79pwaSqIJLDcdOxOWx4OKgNZPkThQYsN2g/Tlg77Z8FhpTiNjDVSo5
+M83kW0qdNlt/ezObctoWSkC7Gqfxjwx2HpvX5c7UyuGRQNoD2MxuMPQEDqBDlF8o
+pNULDH4+iKfdA2n+23s3QYv0h3JCrLsIk7cZ9GJOhos8HN+5ift/TAgb2GMxdwI5
+bi49tnzn5TJr1Hg9cDgvkDeWw7NZDvhGtSnWgEAJ18LhMBRAlbc7xc5po8iDiaZg
+UwZVxUnUITX727ecOzwXOu0L6UA+PBMNwYK9GBqI9E6/ww8BMkcBCdUcJc0fuM/Y
+4ybmwfxteHKjLujdREwCL/dCxg+AROY6GtWNylZnzy9EAXDpKDc/nr4305rOZFe9
+1MhJrHqJYs6jLToJOc6HFRhA14EiV0pQHsCPRpWDprtgXMMtKkZ63aIlDGKuYzKX
+P7hHAaMcVEf8KOtSRVB8LCixl3Hj4l6ZryYWsUGizW+Z/xmq14rPmCSHmcFfaFi4
+v0GJaijRkZQSJ0vI8xao
+=LwmF
 -----END PGP SIGNATURE-----
